# writing-helper-backend

./: CHANGELOG.md  Dockerfile  LICENSE  README.txt  TODO.md  cabal.project.freeze  compose.yaml  writing-helper.cabal
app/: Main.hs
src/: MyLib.hs  Validate.hs
