cabal-version:   3.0
name:            writing-helper
version:         0.2.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Jacob Asper
maintainer:      jacobasper191@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    MyLib
    Validate

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base   ^>=4.20.0.0

  hs-source-dirs:   src
  default-language: GHC2024

executable writing-helper
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base            ^>=4.20.0.0
    , scotty
    , writing-helper

  hs-source-dirs:   app
  default-language: GHC2024

test-suite writing-helper-test
  import:           warnings
  default-language: GHC2024

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base            ^>=4.20.0.0
    , writing-helper
